adding a complete 'About' page

--- a/src/app/display/top-display/sidenav-list/sidenav-list.component.html
+++ b/src/app/display/top-display/sidenav-list/sidenav-list.component.html
@@ -2,13 +2,13 @@
     <a mat-list-item routerLink="/home" (click)="onSidenavClose()">
         <mat-icon color="primary" >home</mat-icon> <span class="nav-caption">Home</span>
     </a>
-    <a mat-list-item routerLink="/wildlife-advice-page" (click)="onSidenavClose()">
+    <a mat-list-item routerLink="/wildlife-advice" (click)="onSidenavClose()">
         <mat-icon color="primary">filter_vintage</mat-icon> <span class="nav-caption">Make My Garden Wild</span>   
     </a>
     <a mat-list-item routerLink="/example-gardens-body" (click)="onSidenavClose()">
         <mat-icon color="primary">filter_vintage</mat-icon> <span class="nav-caption">Inspiration</span>   
     </a>
-    <a mat-list-item routerLink="/about-page" (click)="onSidenavClose()">
+    <a mat-list-item routerLink="/about" (click)="onSidenavClose()">
         <mat-icon color="primary">filter_vintage</mat-icon> <span class="nav-caption">About</span>   
     </a>
 </mat-nav-list>
