--- a/src/app/display/top-display/navigation/navigation.component.html
+++ b/src/app/display/top-display/navigation/navigation.component.html
@@ -15,13 +15,13 @@ to the very bottom of wildlife advice page ************** -->
         <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
             <ul fxLayout fxLayoutGap="23px" class="navigation-items">
                 <li>
-                    <a class="navigation-text" routerLink="/wildlife-advice-page">Make My Garden Wild</a>
+                    <a class="navigation-text" routerLink="/wildlife-advice">Make My Garden Wild</a>
                 </li>
                 <li>
-                    <a class="navigation-text" routerLink="/example-gardens-body">Inspiration</a>
+                    <a class="navigation-text" routerLink="/inspiration">Inspiration</a>
                 </li>
                 <li>
-                    <a class="navigation-text" routerLink="/about-page">About</a>
+                    <a class="navigation-text" routerLink="/about">About</a>
                 </li>
             </ul>
         </div>
