--- a/src/app/pages/about-page/about-text/about-text.component.html
+++ b/src/app/pages/about-page/about-text/about-text.component.html
@@ -1,35 +1,14 @@
 <p class='PageHeader'>About Rewild My Garden! </p>
 
+
+
 <div class='PageBody'>
+  <div class="buttonHolder">
+    <button [routerLink]="['/about']" routerLinkActive="active">Who We Are</button>
+    <button [routerLink]="['/about-rewilding']" routerLinkActive="active">What is Rewilding</button>
+    <button [routerLink]="['/resources']" routerLinkActive="active">Further Resources</button>
+    <button [routerLink]="['/privacy']" routerLinkActive="active">Privacy</button>
+  </div>
 
-<section fxLayout="column" fxFlexAlign="stretch">
-    <div fxFlexAlign="center">
-        <p class="text-content">Rewild my Garden is a project to help people understand how their garden can help wildlife</p>
-    </div>
-
-    <mat-tab-group mat-align-tabs="center">
-
-      <mat-tab> 
-        <ng-template mat-tab-label>
-          Who We Are 
-        </ng-template>
-        <p class="text-content">Rewild My Garden is designed to link people’s actions to those of their neighbours in order to promote collective decision making- the idea being that that will help make small-scale efforts more effective and sustainable. By giving people resources to know how to make effective changes on their land and establishing connections within communities to work together, the hope is that individuals will see their actions as meaningful and be empowered to make change.</p> 
-        <div class="flex-container">
-            <div>
-              <img class="april-img" src="/assets/About_Img.png" alt="Web Designer Image">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget sollicitudin urna. Cras Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget sollicitudin Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget sollicitudin urna. Cras Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget sollicitudin urna. CrasLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget sollicitudin urna. Cras urna. CrasLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget sollicitudin urna. CrasLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget sollicitudin urna. Cras Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget sollicitudin urna. CrasLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget sollicitudin urna. Cras </p>
-            </div>
-          </div>
-      </mat-tab>
-
-      <mat-tab> 
-        <ng-template mat-tab-label>
-          Why Rewilding?
-        </ng-template>
-        <p class="text-content">The aim of the project is to build a website which encourages people to manage small areas of private land for wildlife. Although there is currently a large degree of public interest in rewilding, many people lack the resources to know how to rewild an area effectively, or only have access to a very small quantity of land on which their efforts might not feel meaningful. </p>
-      </mat-tab>
-
-    </mat-tab-group>
-
-  </section>
+  <router-outlet></router-outlet>
 </div>
