--- a/src/app/pages/about-page/about-text/about-text.component.scss
+++ b/src/app/pages/about-page/about-text/about-text.component.scss
@@ -1,16 +1,29 @@
-.text-content{
-    margin-top: 20px;
-    margin-left: 20px;
-}
-
-.april-img{
-    padding: 10px 20px 10px 10px;
-    max-width: 90%;
-    float: left;
-}
-
-.flex-container{
+button{
+    background-color: transparent;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    border: none;
+    justify-content: center;
+    align-items: end;
+    font-size: 17px;
+    line-height: 1.1;
+    color: black;
+    width: 200px;
+    padding: 8px;
 }
+
+button:hover{
+    // font-weight: bold;
+    font-weight: bold;
+}
+
+.buttonHolder{
+    display: flex;
+    //adds the line below
+    border-bottom: black;
+    border-width: 1px;
+    border-bottom-style: solid;
+}
+
+.active {
+    color: #295e20; /* Green */
+ }
