--- a/src/app/pages/home-page/home/home.component.html
+++ b/src/app/pages/home-page/home/home.component.html
@@ -23,9 +23,9 @@
       <p class='PageHeaderSpecial'>Welcome to Rewild My Garden! </p>
       <div class="centraliseButtons">
         <div class="buttonHolder">
-          <button [routerLink]="['/wildlife-advice-page']">Make My Garden Wild</button>
-          <button [routerLink]="['/example-gardens-body']">Inspiration</button>
-          <button [routerLink]="['/about-page']">About</button>
+          <button [routerLink]="['/wildlife-advice']">Make My Garden Wild</button>
+          <button [routerLink]="['/inspiration']">Inspiration</button>
+          <button [routerLink]="['/about']">About</button>
         </div>
       </div>
       <br>
