--- a/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.html
+++ b/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.html
@@ -7,7 +7,7 @@
     <div id="allresults" class="hiddenElem">
       <p *ngIf="responseShow" class="BigSubheader">Ideas for your Garden</p>
       <!-- Subheader which displays what the user input -->
-      <div [innerHTML]="ourSubheader"></div>
+      <div [innerHTML]="ourSubheader" class='userInfoHeader'></div>
 
       <!-- Our generic advice list -->
       <app-wildlife-advice-generic id="specialAdvice" class="hiddenElem" [adviceGenericObject]="ourSpecialAdvice[0]"></app-wildlife-advice-generic>
