--- a/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.scss
+++ b/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.scss
@@ -1,37 +1,41 @@
 .hiddenElem{
-    display: none;
+  display: none;
 }
 
-  .example-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
-  }
-  
-  .example-full-width {
-    width: 100%;
-  }
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
 
-  .BigSubheader{
-    font-family: 'Playfair Display', serif !important;
-    font-size: 40px !important;
-    line-height: 1.1;
-  }
+.example-full-width {
+  width: 100%;
+}
 
-  .creatureSection{
-    margin-top: 10px;
-    margin-bottom: 15px;
-    height: auto;
-    width: auto;
-    padding-left: 20px;
-    padding-right: 20px;
-    background-color: #ffffff;
-    border-style: solid;
-    /* border-radius: 10px; */
-    padding-bottom: 20px;
-    padding-top: 20px;
-    border-color: #dbf5e5;
-    border-width: 2px;
-    border-top: 2px solid rgb(121 194 139);
-    border-radius: 0.25rem;
-  }
+.BigSubheader{
+  font-family: 'Playfair Display', serif !important;
+  font-size: 40px !important;
+  line-height: 1.1;
+}
+
+.userInfoHeader{
+  text-align: center;
+}
+
+.creatureSection{
+  margin-top: 10px;
+  margin-bottom: 15px;
+  height: auto;
+  width: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  background-color: #ffffff;
+  border-style: solid;
+  /* border-radius: 10px; */
+  padding-bottom: 20px;
+  padding-top: 20px;
+  border-color: #dbf5e5;
+  border-width: 2px;
+  border-top: 2px solid rgb(121 194 139);
+  border-radius: 0.25rem;
+}
