Altering homepage and links

--- a/src/app/pages/home-page/home/home.component.html
+++ b/src/app/pages/home-page/home/home.component.html
@@ -26,6 +26,7 @@
           <button [routerLink]="['/wildlife-advice']">Make My Garden Wild</button>
           <button [routerLink]="['/inspiration']">Inspiration</button>
           <button [routerLink]="['/about']">About</button>
+          <button [routerLink]="['/about-rewilding']">About Rewilding</button>
         </div>
       </div>
       <br>
