Editing inspiration page text

--- a/src/app/pages/example-gardens-page/example-gardens-body/example-gardens-body.component.scss
+++ b/src/app/pages/example-gardens-page/example-gardens-body/example-gardens-body.component.scss
@@ -1,6 +1,6 @@
 .Section{
-    padding-left: 30px;
-    padding-right: 30px;
+    margin-top: 20px;
+    /* padding-right: 30px; */
     min-height: 470px;
 }
 
