--- a/src/app/pages/wildlife-advice-page/advice-response/near-you-component/near-you-component.component.html
+++ b/src/app/pages/wildlife-advice-page/advice-response/near-you-component/near-you-component.component.html
@@ -62,7 +62,7 @@
     <img class="leftImage" src="/assets/advice_box_images/Erinaceus_europaeus.jpeg" alt="Hedgehog">
     <div class="card-body">
       <p class="Subheader">Someone within your local area has put in a hedgehog hole! </p>
-      <p class="card-text">Hedgehogs often get trapped in gardens because fenced make it impossible for them to roam around. It looks like someone 
+      <p class="card-text">Hedgehogs often get trapped in gardens because fences make it impossible for them to roam around. Our data suggests that someone 
         in your neighbourhood had put in a hedgehog hole. That means if you do the same thing, you could potentially help out your local hedgehogs together!</p>
     </div>
   </div>
