--- a/src/app/pages/example-gardens-page/example-gardens-body/example-gardens-body.component.html
+++ b/src/app/pages/example-gardens-page/example-gardens-body/example-gardens-body.component.html
@@ -1,21 +1,20 @@
 
 
-<!-- iframe throws an error loading instagram content? -->
-
-
+<!-- iframe throws an error loading instagram content? ************ -->
 
 <p class='PageHeader'>Inspiration for your Garden </p>
 
 <div class='PageBody'>
-    <div>
+    
+<div>
     <p class="BodySubtitle">The Scientific One</p>
-    <!-- <br> -->
     <div class="Section">
         <iframe width="400" height="456" class="instagramImage" src="https://www.instagram.com/p/CRWE57DoQnH/embed" frameborder="0"></iframe>
-        <!-- FILLER TEXT FROM RHS INSTAGRAM, MUST BE CHANGED -->
-        <p class="exampleGardenTextBox">Much of the planting in the Wildlife Garden which surrounds RHS Hilltop - The Home of Gardening Science at @rhswisley has been deliberately chosen to be particularly attractive to wildlife and provide a haven for insects.
-        At the heart of the garden, designed by @ann_mariepowell, is a chestnut and willow sculpture by Tom Hare (@sticksnapper). This structure provides an enormous habitat, filled with pine cones, twigs and anything else that might make a cosy home to all manner of insects.
-        It features tubes for red mason bees to nest in, as well as plenty of other nesting sites for solitary bees such as drilled logs and pockets of clay. The central habitat feature can be turned by staff to ensure the nesting sites get the sunniest aspect.</p>
+        <p class="exampleGardenTextBox">Much of the planting at RHS Wisley's Wildlife Garden has been deliberately chosen to be particularly attractive to wildlife. The garden is designed to demonstrate how 
+            the guidance that the RHS gives on wildlife friendly gardening can be put into practice in an attractive and cleanly designed space. Even the garden's sculptures 
+            house nesting sites for insects. <br><br>This garden design has been created from research carried out by the RHS about how garden spaces can 
+            provide for wildife as effectively as possible. Visit the garden in summer to see how well considered wildlife spaces can be 
+            beautiful places for humans to visit too! <br><br>The garden was designed by Ann Mariepowell, with chestnut and willow sculptures designed by Tom Hare. </p>
     </div>
 </div>
 
@@ -24,27 +23,25 @@
 <div>
 
     <p class="BodySubtitle">The Relaxed One</p>
-    <!-- <br> -->
     <div class="Section">
         <iframe width="400" height="456" class="instagramImageRight" src="https://www.instagram.com/p/CRQ5j5eofqa/embed" frameborder="0"></iframe>
-        <!-- FILLER TEXT FROM RHS INSTAGRAM, MUST BE CHANGED -->
-        <p class="exampleGardenTextBox">In 2019, we welcomed the BBC Springwatch Garden to #RHSHamptonCourt. This week is #BeesNeeds Week, and this garden is a fantastic example of how to rewild your green spaces and turn them into mini nature reserves that bees and other wildlife will love.
-            Here are some of the take-home tips from the garden, which was designed by @jothompsongarden in consultation with @kategbradbury:
-            Take a break from mowing your lawn (or a small area of it) to encourage the growth of nectar-rich plants, such as clover. These plants provide a vital food source for pollinators and make a beautiful feature too.
-            Taking a more relaxed approach to weeding allows wild plants to flourish in your garden and can increase biodiversity
-            Bug hotels are a fantastic way to provide shelter for a whole range of insects. You can use material kept back from pruning your trees and shrubs and arrange piles among your planting</p>
+        <p class="exampleGardenTextBox">At RHS Hampton Court you'll find a more laid back wildlife garden, designed by Jo Thompson. The garden is designed to 
+            act as a mini nature reserve. The designers have chosen to let the grass grow long and to take a relaxed approach to weeding which has 
+            resulted in a laid-back garden which is buzzing with life. In designs like these, you can see first hand the beauty of gardens that are left to grow long. <br><br>
+            The gardeners have used materials left over from pruning trees and shrubs to create piles among flower beds. These pieces of wood are used by insects.</p>
     </div>
 </div>
 
 <br>
 
 <div>
-    <p class="BodySubtitle">The 20 Year Project One</p>
-    <!-- <br> -->
+    <p class="BodySubtitle">The 10 Year Project One</p>
     <div class="Section">
         <iframe width="400" height="456" class="instagramImage" src="https://www.instagram.com/p/CVMxJX4Mc3G/embed" frameborder="0"></iframe>
-        <!-- FILLER TEXT FROM RHS INSTAGRAM, MUST BE CHANGED -->
-        <p class="exampleGardenTextBox">"Dappled light, cloak of green, tranquillity, intrigue, interpretation, peace, stillness" - thanks to London Wildlife Trust staff member Rosie for this vision of green, taken recently at Camley Street Natural Park</p>
+        <p class="exampleGardenTextBox">This tranquil city garden at Camley Street Natural Park shows what light management and time can do, even deep in London. <br><br>By creating 
+            wildlife gardens which incorporate bushes and shrubs you can create nesting sites for birds, make quiet areas for hedgehogs to hunt and even protect yourself from pollution. Bushes and shrubs are a 
+            wonderful barrier to block dust and pollution from your property. <br><br>Your garden can become even better for wildlife if you grow bushes that 
+            produce berries, because it allows you to provide food for local wildlife as well. </p>
     </div>
 </div>
 </div>
