--- a/src/app/pages/wildlife-advice-page/email-send/email-send.component.html
+++ b/src/app/pages/wildlife-advice-page/email-send/email-send.component.html
@@ -1,9 +1,9 @@
       <!-- Email input section -->
       <!-- This should be split into a new compoent !! ************** -->
-      <!-- <div id="emailBoxID">
+      <div id="emailBoxID">
         <div class="card">
           <div class="card-body">
-            <p class="Subheader">Have Your Advice Emailed to You</p>
+            <p class="Subheader">Have Your Advice Emailed to You IN CHILD</p>
             <p class="card-text">If you want to have the advice you have saved from this page emailed to you, enter your email and click Send.</p>
 
             <form class="example-form">
@@ -23,4 +23,4 @@
             <button mat-stroked-button (click)="processEmailData()" color="primary" mat-button >Send Email</button>
           </div>
         </div>
-      </div> -->
+      </div>
