--- a/src/app/pages/wildlife-advice-page/advice-questions/wildlife-multiplechoice/wildlife-multiplechoice.component.scss
+++ b/src/app/pages/wildlife-advice-page/advice-questions/wildlife-multiplechoice/wildlife-multiplechoice.component.scss
@@ -1,5 +1,9 @@
 .radio-question {
-    display: flex;
-    flex-direction: column;
-  }
+  display: flex;
+  flex-direction: column;
+}
+
+.hiddenQ{
+  display: none;
+}
   
