--- a/src/app/pages/wildlife-advice-page/advice-questions/wildlife-multiplechoice/wildlife-multiplechoice.component.html
+++ b/src/app/pages/wildlife-advice-page/advice-questions/wildlife-multiplechoice/wildlife-multiplechoice.component.html
@@ -1,62 +1,76 @@
 <div class="MC-question-container">
 
-<label id="multiplechoice-label">What soil type do you have?</label>
-<!-- The 'aria-labelledby' attribute takes precedence as the element's text alternative. -->
-<mat-radio-group aria-labelledby="soil-question" class="radio-question" [(ngModel)]="chosenSoilType">
-  <mat-radio-button class="radio-button" *ngFor="let soilType of soilTypes" [value]="soilType">
-    {{soilType}}
-  </mat-radio-button>
-</mat-radio-group>
+<div class="hiddenQ" id="question-one">
+  <label id="multiplechoice-label">What size is your outdoor space?</label>
+  <!-- The 'aria-labelledby' attribute takes precedence as the element's text alternative. -->
+  <mat-radio-group aria-labelledby="space-question" class="radio-question" [(ngModel)]="chosenSize">
+    <mat-radio-button class="radio-button" *ngFor="let size of sizes" [value]="size">
+      {{size}}
+    </mat-radio-button>
+  </mat-radio-group>
+</div>
+
+<button mat-stroked-button color="primary" class="hiddenQ" id="next-one" (click)="tryNextOne()">Next</button>
+
+<div class="hiddenQ" id="question-two">
+  <label id="multiplechoice-label">What soil type do you have?</label>
+  <!-- The 'aria-labelledby' attribute takes precedence as the element's text alternative. -->
+  <mat-radio-group aria-labelledby="soil-question" class="radio-question" [(ngModel)]="chosenSoilType">
+    <mat-radio-button class="radio-button" *ngFor="let soilType of soilTypes" [value]="soilType">
+      {{soilType}}
+    </mat-radio-button>
+  </mat-radio-group>
+</div>
+
+<button mat-stroked-button color="primary" class="hiddenQ" id="next-two" (click)="tryNextTwo()">Next</button>
+
+<div class="hiddenQ" id="question-three">
+  <label id="multiplechoice-label">What soil PH do you have?</label>
+  <!-- The 'aria-labelledby' attribute takes precedence as the element's text alternative. -->
+  <mat-radio-group aria-labelledby="PH-question" class="radio-question" [(ngModel)]="chosenPHType">
+    <mat-radio-button class="radio-button" *ngFor="let PHType of PHTypes" [value]="PHType">
+      {{PHType}}
+    </mat-radio-button>
+  </mat-radio-group>
+</div>
+
+<button mat-stroked-button color="primary" class="hiddenQ" id="next-three" (click)="tryNextThree()">Next</button>
+
+<div class="hiddenQ" id="question-four">
+  <label id="multiplechoice-label">How shady is your garden?</label>
+  <!-- The 'aria-labelledby' attribute takes precedence as the element's text alternative. -->
+  <mat-radio-group aria-labelledby="shade-question" class="radio-question" [(ngModel)]="chosenShadeType">
+    <mat-radio-button class="radio-button" *ngFor="let shadeType of shadeTypes" [value]="shadeType">
+      {{shadeType}}
+    </mat-radio-button>
+  </mat-radio-group>
+</div>
+
+<button mat-stroked-button color="primary" class="hiddenQ" id="next-four" (click)="tryNextFour()">Next</button>
+ 
+<div class="hiddenQ" id="question-five">
+  <app-find-postcode (nextQuestion)="tryNextFive()"></app-find-postcode>
+</div>
+
+<!-- no <button> here as there is a button which is part of app-find-postcode -->
+
+<div class="hiddenQ" id="question-six">
+  <label id="multiplechoice-label">Please select any suggestions that you are particularly interested in.</label>
+  <section class="example-section">
+    <mat-checkbox class="personal-choices" [(ngModel)]="childFriendly">ChildFriendly</mat-checkbox>
+    <mat-checkbox class="personal-choices" [(ngModel)]="cheap">Cheap</mat-checkbox>
+    <mat-checkbox class="personal-choices" [(ngModel)]="easy">Easy</mat-checkbox>
+    <mat-checkbox class="personal-choices" [(ngModel)]="renting">Renting</mat-checkbox>
+    <mat-checkbox class="personal-choices" [(ngModel)]="pavedGardens">PavedGardens</mat-checkbox>
+  </section>
+</div>
+
+<button mat-stroked-button color="primary" class="hiddenQ" id="next-six" (click)="tryNextSixAndSave()">Save</button>
 
 <br>
-
-<label id="multiplechoice-label">What soil PH do you have?</label>
-<!-- The 'aria-labelledby' attribute takes precedence as the element's text alternative. -->
-<mat-radio-group aria-labelledby="PH-question" class="radio-question" [(ngModel)]="chosenPHType">
-  <mat-radio-button class="radio-button" *ngFor="let PHType of PHTypes" [value]="PHType">
-    {{PHType}}
-  </mat-radio-button>
-</mat-radio-group>
-
 <br>
 
-<label id="multiplechoice-label">How shady is your garden?</label>
-<!-- The 'aria-labelledby' attribute takes precedence as the element's text alternative. -->
-<mat-radio-group aria-labelledby="shade-question" class="radio-question" [(ngModel)]="chosenShadeType">
-  <mat-radio-button class="radio-button" *ngFor="let shadeType of shadeTypes" [value]="shadeType">
-    {{shadeType}}
-  </mat-radio-button>
-</mat-radio-group>
-
-<br>
-
-<label id="multiplechoice-label">What size is your outdoor space?</label>
-<!-- The 'aria-labelledby' attribute takes precedence as the element's text alternative. -->
-<mat-radio-group aria-labelledby="space-question" class="radio-question" [(ngModel)]="chosenSize">
-  <mat-radio-button class="radio-button" *ngFor="let size of sizes" [value]="size">
-    {{size}}
-  </mat-radio-button>
-</mat-radio-group>
-
-<br>
-
-<label id="multiplechoice-label">Please select any suggestions that you are particularly interested in.</label>
-<section class="example-section">
-  <mat-checkbox class="personal-choices" [(ngModel)]="childFriendly">ChildFriendly</mat-checkbox>
-  <mat-checkbox class="personal-choices" [(ngModel)]="cheap">Cheap</mat-checkbox>
-  <mat-checkbox class="personal-choices" [(ngModel)]="easy">Easy</mat-checkbox>
-  <mat-checkbox class="personal-choices" [(ngModel)]="renting">Renting</mat-checkbox>
-  <mat-checkbox class="personal-choices" [(ngModel)]="pavedGardens">PavedGardens</mat-checkbox>
-</section>
-
-<br>
-
-<button mat-stroked-button color="primary" (click)="saveForm()">Save</button>
 <p id="errMessage"></p>
-
-<br>
-
-<app-find-postcode></app-find-postcode>
 
 <br>
 
