--- a/src/app/pages/wildlife-advice-page/advice-questions/find-postcode/find-postcode.component.scss
+++ b/src/app/pages/wildlife-advice-page/advice-questions/find-postcode/find-postcode.component.scss
@@ -1,13 +1,43 @@
-.example-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
-  }
-  
-  .example-full-width {
-    width: 100%;
-  }
+.postcode-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
 
-  .errStandin{
-    color: rgb(161, 0, 0);
-  }
+.postcode-full-width {
+  width: 100%;
+}
+
+.errStandin {
+  color: rgb(161, 0, 0);
+}
+
+//This formatting is designed to replicate that in wildlife-multichoice
+.postcode-question {
+  font-size: 17px;
+  min-height: 350px;
+  padding-left: 40px;
+  padding-top: 30px;
+}
+
+button {
+  height: 43px;
+  width: 73px;
+  margin-bottom: 20px;
+  // margin-top: 20px;
+  margin-left: 40px;
+}
+
+#multiplechoice-label {
+  // margin-bottom: 1.3rem;
+  font-size: 19px;
+}
+
+#sub-label {
+  font-size: 15px;
+  color: #295e20;
+}
+
+.question-labels {
+  margin-bottom: 1.3rem;
+}
