making links work in wildlife-info-generic

--- a/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.html
+++ b/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.html
@@ -8,8 +8,7 @@
       <p *ngIf="responseShow" class="BigSubheader">Ideas for your Garden</p>
       <app-display-user-response></app-display-user-response>
 
-      <!-- Our generic advice list -->
-      <app-wildlife-advice-generic id="specialAdvice" class="hiddenElem" [adviceGenericObject]="ourSpecialAdvice[0]"></app-wildlife-advice-generic>
+      <app-wildlife-info-generic id="specialAdvice" class="hiddenElem" [infoGenericObject]="ourSpecialAdvice[0]"></app-wildlife-info-generic>
 
       <div class="creatureSection">
         <div id="insectsTitle" class="hiddenElem">
