--- a/src/app/pages/wildlife-advice-page/advice-response/wildlife-info-generic/wildlife-info-generic.component.html
+++ b/src/app/pages/wildlife-advice-page/advice-response/wildlife-info-generic/wildlife-info-generic.component.html
@@ -1,8 +1,11 @@
 
 <div class="InfoHolder">
   <mat-card class="card">
-    <mat-card-subtitle> <b> {{ infoGenericObject.Title }} :</b> {{ infoGenericObject.BodyText }} </mat-card-subtitle>
+    <mat-card-subtitle [innerHTML]="ourBodyText"> 
+      <!-- <b> {{ infoGenericObject.Title }} :</b>       
+      {{ infoGenericObject.BodyText }}  -->
+    </mat-card-subtitle>
   </mat-card>
 </div>
-
+<!-- <div [innerHTML]="ourBodyText"></div> -->
 <br>
