Reformatting for mobile view

--- a/src/app/display/top-display/sidenav-list/sidenav-list.component.html
+++ b/src/app/display/top-display/sidenav-list/sidenav-list.component.html
@@ -5,7 +5,7 @@
     <a mat-list-item routerLink="/wildlife-advice" (click)="onSidenavClose()">
         <mat-icon color="primary">filter_vintage</mat-icon> <span class="nav-caption">Make My Garden Wild</span>   
     </a>
-    <a mat-list-item routerLink="/example-gardens-body" (click)="onSidenavClose()">
+    <a mat-list-item routerLink="/inspiration" (click)="onSidenavClose()">
         <mat-icon color="primary">filter_vintage</mat-icon> <span class="nav-caption">Inspiration</span>   
     </a>
     <a mat-list-item routerLink="/about" (click)="onSidenavClose()">
