--- a/src/app/pages/wildlife-advice-page/advice-questions/find-postcode/find-postcode.component.scss
+++ b/src/app/pages/wildlife-advice-page/advice-questions/find-postcode/find-postcode.component.scss
@@ -18,6 +18,7 @@
   min-height: 350px;
   padding-left: 40px;
   padding-top: 30px;
+  padding-right: 40px;
 }
 
 button {
@@ -40,4 +41,18 @@ button {
 
 .question-labels {
   margin-bottom: 1.3rem;
+}
+
+/* If the screen size is 600px wide or less*/
+@media screen and (max-width: 600px) {
+  .postcode-question{
+    padding-left: 30px;
+    padding-top: 20px;
+    padding-right: 30px;
+    min-height: 400px;
+  }
+
+  button {
+    margin-left: 30px;
+  }
 }
