--- a/src/app/pages/wildlife-advice-page/email-send/email-send.component.html
+++ b/src/app/pages/wildlife-advice-page/email-send/email-send.component.html
@@ -3,14 +3,45 @@
   <div class="card">
     <div class="card-body">
       <p class="Subheader">Have Your Advice Emailed to You</p>
-      <p class="card-text">If you want to have the advice you have saved from this page emailed to you, enter your email and click Send.</p>
+      <p class="card-text">
+        You can have advice from this page emailed to you as a record. Simply go
+        through the page and click 'Save To My Goals' next to any advice that
+        you're interested in. If you fill in your email below and click 'Send
+        Email', the advice you have saved will be sent to your inbox.
+        <br /><br />
+        If the site isn't providing much information about things that people
+        are doing in your local area, you can select 'Send local area updates'
+        and you will recieve an update if multiple people in your area have said
+        that they are planning to put in a hedgehog hole or pond. By
+        collaborating, you can create larger habitats for local wildlife.
+        <br /><br />
+        <span class="altColour"
+          >If you have advice emailed to you, we will save some of your
+          information so that we can let users near you know if they can support
+          what you are doing to help local wildlife. Please have a look at our
+          <a routerLink="/privacy">privacy policy</a> to learn more.</span
+        >
+        We don't have a newsletter, so the only communication you will ever
+        recieve from us is your wildlife advice and our local updates if you
+        have asked for them.
+      </p>
 
       <form class="example-form">
         <mat-form-field class="example-full-width" appearance="outline">
           <mat-label>Enter your email here</mat-label>
-          <input type="email" matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher"
-                 placeholder="Ex. pat@example.com">
-          <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+          <input
+            type="email"
+            matInput
+            [formControl]="emailFormControl"
+            [errorStateMatcher]="matcher"
+            placeholder="Ex. pat@example.com"
+          />
+          <mat-error
+            *ngIf="
+              emailFormControl.hasError('email') &&
+              !emailFormControl.hasError('required')
+            "
+          >
             Please enter a valid email address
           </mat-error>
           <mat-error *ngIf="emailFormControl.hasError('required')">
@@ -18,8 +49,16 @@
           </mat-error>
         </mat-form-field>
       </form>
-
-      <button mat-stroked-button (click)="processEmailData()" color="primary" mat-button >Send Email</button>
+      <p><mat-checkbox class="personal-choices" [(ngModel)]="localUpdates">Send Local Area Updates</mat-checkbox></p>
+      <button
+        mat-stroked-button
+        (click)="processEmailData()"
+        color="primary"
+        mat-button
+      >
+        Send Email
+      </button>
+      <p class="card-text"></p>
     </div>
   </div>
 </div>
